MComix 1.01

    - Keyboard shortcuts can now be edited from MComix' preference dialog
      in a new tab "Shortcuts". (by Valentin Gologuzov)

    - During database upgrade, MComix did not consider that books in the
      "Last read" database might no longer exist, leading to program crash.
      This has been fixed.

    - Fixed win32 builds missing the 'calendar' module.

    - The ALT+Left and ALT+Right keys will now either advance one page,
      or go back one page, depending on the user being in manga mode.

    - Manual zooming will now use a logarithmic scale instead of a linear
      spline.

    - The library will now use natural sorting for "Sort by name" and
      "Sort by path" instead of alphanumeric sorting, bringing it in line
      with most other sorting done by MComix.

    - Adding a book to a collection with the same book already existing
      in another collection did not immediately show the book in the
      library main view when the new collection was already selected.

    - Updated traditional Chinese translation (by Wayne Su).

MComix 1.00
Release date: 26.04.2013

    - When "Store information about recently opened files" is enabled in
      the preferences dialog, all opened books will automatically be added
      to the library and moved into the collection "Recent". In addition,
      the last read page will be stored and recalled the next time the book
      is opened again.

    - Fixed several malfunctions that could occur if no SQLite library
      was installed.

    - Fixed a bug that prevented MComix from showing the first page of an
      archive nested in other archives.

    - If both scrollbars were shown, it was impossible to scroll all the way
      down using the scrolling keys. This has been fixed.

    - When a directory was opened using the File->Open dialog, MComix did not
      sort files within the directory, ignoring the user's preferences.
